# camera-traps

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml  events.fbs  flake.nix  pytorch_detector.py  traps-v0.1.toml
.cargo/: config.toml
.github/workflows/: docker-image.yml  test.yml  test_suite.yml
External Plugins/: Image generating plugin
custom_install/: Dockerfile  README.md  compile.py  defaults.yml  ground_truth.csv  install.sh
custom_install/templates/: docker-compose.yml
external_plugins/detection_reporter_plugin/: Dockerfile  detection_reporter.py
external_plugins/image_detecting_plugin/: Dockerfile  README.md  docker-compose.yml  entry.sh  image_detecting_plugin.py  motion.conf  motion.default
external_plugins/image_generating_plugin/: Dockerfile  Image_scoring.py  README.md  flake.nix  image_generating_plugin.py  input_example.json  pyproject.toml
external_plugins/image_scoring_plugin/: Dockerfile  Dockerfile-3.13-server  Dockerfile-3.13-ultralytics  Dockerfile-3.8  Dockerfile-3.8-inference  Dockerfile-3.8-nano  Dockerfile-3.8-nano-ultralytics  Dockerfile-3.8-server  Dockerfile-3.8-ultralytics  Dockerfile-3.8-yolov5  README.md  entrypoint-nano.sh  entrypoint.sh  flake.nix  image_scoring_plugin.py  image_scoring_plugin_server.py  image_scoring_plugin_ultralytics.py  image_scoring_plugin_yolov5.py  label_mapping.json  load_test_image_scoring.py  pyproject.toml  pytorch_detector.py  requirements-3.13-ultralytics.txt  requirements-3.13.txt  requirements-nano.txt  requirements-ultralytics.txt  requirements.txt  run_detector_multi.py  test_image_scoring.sh  ultralytics.patch
external_plugins/oracle_plugin/: Dockerfile  oracle_plugin.py
external_plugins/power_measuring_plugin/: Dockerfile  Dockerfile-powerjoular  Dockerfile-scaphandre  README.md  build_and_run_sample.sh  command_hint.sh  cpu.json  entrypoint.sh  example_cpu.json  example_metadata.json  generate_power_summary.py  jtop_backend.py  metadata.json  power_measuring_plugin.py  powerjoular_backend.py  requirements.txt  sample_jtop_out.json  scaphandre_backend.py  scaphandre_backend_old.py  validate_schemas.py
installer/: Dockerfile  README.md  compile.py  defaults.yml  example_input.yml  example_input_demo.yml  install.sh
installer/templates/: docker-compose.yml
releases/: README.md
releases/0.3.1/: docker-compose.yml  traps.toml
releases/0.3.2/: docker-compose.yml  traps.toml
releases/0.3.3/: docker-compose.yml
releases/0.3.3_power_test/: docker-compose.yml
resources/: docker-compose.yml  events.fbs  image_gen_config.json  log4rs.yml  traps-image-store.toml  traps-integration.toml  traps.toml
src/: events.rs  events_generated.rs  lib.rs  main.rs  plugins.rs  traps_utils.rs
src/python/: Dockerfile  Dockerfile-3.13  Dockerfile-3.8  README.md  ctevents.py  pyproject.toml  requirements.txt  test_ctevents.py
src/python/ctevents/: __init__.py  ctevents.py
src/python/ctevents/gen_events/: EventType.py  ImageDeletedEvent.py  ImageLabelScore.py  MonitorType.py  PluginStartedEvent.py  PluginTerminatingEvent.py
src/python/gen_events/: EventType.py  ImageDeletedEvent.py  ImageLabelScore.py  ImageReceivedEvent.py  ImageScoredEvent.py  ImageStoredEvent.py  MonitorPowerStartEvent.py  MonitorPowerStopEvent.py  MonitorType.py  NewImageEvent.py
tests/: integration_tests.rs
(+48 files in other folders)
