[package]
name = "camera-traps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
chrono = "0.4.22"
#event-engine = { path = "../event-engine/event-engine/"}
event-engine = "0.1.3"
flatbuffers = "2.1.2"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.1.1"
path-absolutize = "3.0.13"
serde = "1.0.144"
serde_derive = "1.0.144"
shellexpand = "2.1.2"
thiserror = "1.0.32"
toml = "0.5.9"
uuid = { version = "1.1", features = ["v4"] }
zmq = "0.9.2"
