[package]
name = "camera-traps"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
chrono = "0.4.22"
#event-engine = { path = "../event-engine/event-engine/"}
event-engine = "0.2.0"
flatbuffers = "2.1.2"
glob = "0.3.1"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.1.1"
path-absolutize = "3.0.13"
rand = "0.8.5"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.92"
shellexpand = "2.1.2"
thiserror = "1.0.32"
toml = "0.5.9"
uuid = { version = "1.1", features = ["v4", "serde"] }
zmq = "0.9.2"
