[tool.poetry]
name = "image_generating_plugin"
version = "0.1.0"
description = "Camera Traps Image Generating Plugin written in Python."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"
pyzmq = "^25.0.0"
tapis-pyevents = "^0.1.0"
tapis-ctevents = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# TODO
image_generating_plugin = 'image_generating_plugin:main'