[tool.poetry]
name = "tapis-ctevents"
version = "0.3.1"
description = "A module for working with Camera Traps events in Python."
authors = ["Serena Shah <serena.shah@utexas.edu>"]
license = "BSD 3-Clause"
readme = "README.md"
packages = [{include = "ctevents"}]

[tool.poetry.dependencies]
python = "^3.8"
flatbuffers = "^23.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
